--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,7 @@
     <jackson.dataformat.version>2.12.3</jackson.dataformat.version>
     <jackson.version>2.12.3</jackson.version>
     <jcs.version>2.1</jcs.version>
-    <johnzon.version>1.2.14</johnzon.version>
+    <johnzon.version>1.2.15-SNAPSHOT</johnzon.version>
     <junit.version>4.13.2</junit.version>
     <mojarra.version>3.0.0</mojarra.version>
     <myfaces.version>3.0.0</myfaces.version>
