Some more dependency upgrades

--- a/pom.xml
+++ b/pom.xml
@@ -84,15 +84,15 @@
     <commons-cli.version>1.4</commons-cli.version>
     <commons-codec.version>1.15</commons-codec.version>
     <commons-collections.version>3.2.2</commons-collections.version>
-    <commons-dbcp.version>2.3.0</commons-dbcp.version>
+    <commons-dbcp.version>2.9.0</commons-dbcp.version>
     <commons-discovery.version>0.5</commons-discovery.version>
     <commons-fileupload.version>1.4</commons-fileupload.version>
-    <commons-io.version>2.8.0</commons-io.version>
+    <commons-io.version>2.11.0</commons-io.version>
     <commons-lang3.version>3.11</commons-lang3.version>
     <commons-logging-api.version>1.1</commons-logging-api.version>
     <commons-logging.version>1.2</commons-logging.version>
     <commons-net.version>3.7.2</commons-net.version>
-    <commons-pool.version>2.10.0</commons-pool.version>
+    <commons-pool.version>2.11.1</commons-pool.version>
     <cxf.version>3.4.3</cxf.version>
     <geronimo-activation_1.1_spec.version>1.1</geronimo-activation_1.1_spec.version>
     <geronimo-javamail_1.6_mail.version>1.0.0</geronimo-javamail_1.6_mail.version>
@@ -104,21 +104,22 @@
     <johnzon.version>1.2.15-SNAPSHOT</johnzon.version>
     <junit.version>4.13.2</junit.version>
     <mojarra.version>3.0.0</mojarra.version>
-    <myfaces.version>3.0.0</myfaces.version>
+    <myfaces.version>3.0.1</myfaces.version>
     <openjpa.version>3.2.0</openjpa.version>
     <openwebbeans.version>2.0.23</openwebbeans.version>
-    <org.apache.activemq.version>5.16.2</org.apache.activemq.version>
+    <org.apache.activemq.version>5.16.3</org.apache.activemq.version>
     <quartz-openejb-shade.version>2.2.4</quartz-openejb-shade.version>
     <slf4j.version>1.7.21</slf4j.version>
-    <tomcat.version>10.0.6</tomcat.version>
+    <tomcat.version>10.0.11</tomcat.version>
     <tomee.build.name>${project.groupId}.tomee.tomee</tomee.build.name>
     <tomee.version>8.0.9-SNAPSHOT</tomee.version>
-    <version.eclipselink>3.0.0</version.eclipselink>
+    <version.eclipselink>3.0.2</version.eclipselink>
     <version.groovy>2.4.12</version.groovy>
     <version.hsqldb>2.3.4</version.hsqldb>
     <version.javaee-api>8.0-5</version.javaee-api>
     <version.xalan>2.7.2</version.xalan>
-    <xbeanVersion>4.14</xbeanVersion>
+    <xbeanVersion>4.20</xbeanVersion>
+    <xbean-asm7-Version>4.16</xbean-asm7-Version>
 
     <webprofile.work-dir>${project.build.directory}/webprofile-work-dir</webprofile.work-dir>
     <plus.work-dir>${project.build.directory}/plus-work-dir</plus.work-dir>
@@ -649,7 +650,7 @@
       <dependency>
         <groupId>org.apache.xbean</groupId>
         <artifactId>xbean-asm7-shaded</artifactId>
-        <version>${xbeanVersion}</version>
+        <version>${xbean-asm7-Version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.xbean</groupId>
