--- a/tomee/apache-tomee/pom.xml
+++ b/tomee/apache-tomee/pom.xml
@@ -357,7 +357,7 @@
               <dependency>
                 <groupId>org.apache.xbean</groupId>
                 <artifactId>xbean-asm7-shaded</artifactId>
-                <version>${xbeanVersion}</version>
+                <version>${xbean-asm7-Version}</version>
               </dependency>
               <dependency>
                 <groupId>org.codehaus.groovy</groupId>
@@ -662,7 +662,7 @@
               <dependency>
                 <groupId>org.apache.xbean</groupId>
                 <artifactId>xbean-asm7-shaded</artifactId>
-                <version>${xbeanVersion}</version>
+                <version>${xbean-asm7-Version}</version>
               </dependency>
               <dependency>
                 <groupId>org.codehaus.groovy</groupId>
